--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
     
+        <!-- https://mvnrepository.com/artifact/org.apache.derby/derby -->
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    
   </dependencies>
 
   <properties>
