--- a/pom.xml
+++ b/pom.xml
@@ -50,14 +50,10 @@
     <finalName>webAdminTool</finalName>
 
     <plugins>
-      <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-compiler-plugin</artifactId>
-	<configuration>
-	  <release>11</release>
-	  <failOnMissingWebXml>false</failOnMissingWebXml>
-	</configuration>
-      </plugin>
+	<plugin>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-maven-plugin</artifactId>
+	</plugin>
       
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
