--- a/pom.xml
+++ b/pom.xml
@@ -50,13 +50,13 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
-	<!-- https://mvnrepository.com/artifact/org.apache.derby/derby -->
-<dependency>
-    <groupId>org.apache.derby</groupId>
-    <artifactId>derby</artifactId>
-    <scope>runtime</scope>
-</dependency>
-	
+    <!-- https://mvnrepository.com/artifact/org.apache.derby/derby -->
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    
 
     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
     <dependency>
@@ -65,6 +65,19 @@
       <scope>runtime</scope>
     </dependency>
     
+
+    <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>      
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.1.5.Final</version>
+    </dependency>
 
   </dependencies>
 
