Fix a bug with derby

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.mvc.view.suffix=.jsp
 spring.resources.static-locations = classpath:/static/
 
 #Database
+spring.jpa.hibernate.ddl-auto=update
